--- a/CSS/statementStyle2.css
+++ b/CSS/statementStyle2.css
@@ -2,8 +2,8 @@
     width: 300px;
     height: 300px;
     position: relative;
-    margin-top: 100px;
-    margin-left: 500px;
+    margin-top: 50px;
+    margin-left: 150px;
     border: 5px solid;
     text-align: center;
     font-size: 20px;
@@ -14,15 +14,27 @@
     height: 300px;
     position: relative;
     margin-top: -310px;
-    margin-left: 1000px;
+    margin-left: 1450px;
     border: 5px solid;
     text-align: center; 
     font-size: 20px;
 }
 
+#statementImg {
+    position: relative;
+    margin-top: 150px;
+    margin-left: 400px; 
+}
+
 #statement {
     position: relative;
-    margin-top: 100px;
-    margin-left: 800px; 
+    margin-top: -200px;
+    margin-left: 700px; 
     font-size: 40px; 
+}
+
+#buttons {
+    position: relative;
+    margin-top: 150px;
+    margin-left: 700px; 
 }
