--- a/CSS/statementStyle3.css
+++ b/CSS/statementStyle3.css
@@ -3,38 +3,56 @@
     height: 300px;
     position: relative;
     margin-top: 50px;
-    margin-left: 150px;
+    margin-left: 50px;
     border: 5px solid;
     text-align: center;
     font-size: 20px;
 }
 
-#user2Box {
-    width: 300px;
-    height: 300px;
+#show {
     position: relative;
-    margin-top: -310px;
-    margin-left: 1450px;
-    border: 5px solid;
-    text-align: center; 
-    font-size: 20px;
+    margin-top: 100px;
+    margin-left: 100px;
+}
+
+#line {
+    position: absolute;
+    width: 0;
+    height: 750px;
+    margin-top: -350px;
+    margin-left: 450px;
+    border-left: 5px solid black;
+
 }
 
 #statementImg {
     position: relative;
-    margin-top: 150px;
-    margin-left: 400px; 
+    margin-top: -150px;
+    margin-left: 600px; 
 }
 
 #statement {
     position: relative;
     margin-top: -150px;
-    margin-left: 700px; 
-    font-size: 35px; 
+    margin-left: 900px; 
+    font-size: 40px; 
+    font-style:italic;
 }
 
-#buttons {
+#startRecording {
     position: relative;
+    width: 160px;
+    height: 60px;
+    margin-top: 250px;
+    margin-left: 1200px; 
+    font-size: 20px;
+}
+
+#exportVideo {
+    position: relative;
+    width: 160px;
+    height: 60px;
     margin-top: 150px;
-    margin-left: 700px; 
+    margin-left: 100px; 
+    font-size: 20px;
 }
