--- a/CSS/statementStyle5.css
+++ b/CSS/statementStyle5.css
@@ -1,7 +1,3 @@
-body {
-    background-color: pink;
-}
-
 #user1Box {
     width: 300px;
     height: 300px;
@@ -15,7 +11,7 @@ body {
 
 #show {
     position: relative;
-    margin-top: 20px;
+    margin-top: 100px;
     margin-left: 100px;
 }
 
@@ -26,16 +22,24 @@ body {
     margin-top: -350px;
     margin-left: 450px;
     border-left: 5px solid black;
+
 }
 
-#startSignal {
+#statement {
     position: relative;
-    margin-top: -150px;
-    margin-left: 1000px; 
-    font-size: 50px; 
+    margin-top: 150px;
+    margin-left: 800px; 
+    font-size: 40px; 
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-#openCamera {
+#statementImg {
+    position: relative;
+    margin-top: 150px;
+    margin-left: 700px; 
+}
+
+#startRecording {
     position: relative;
     width: 160px;
     height: 60px;
@@ -44,12 +48,11 @@ body {
     font-size: 20px;
 }
 
-#start {
+#exportVideo {
     position: relative;
     width: 160px;
     height: 60px;
     margin-top: 150px;
     margin-left: 100px; 
     font-size: 20px;
-    font-style:italic;
 }
