--- a/CSS/indexStyle.css
+++ b/CSS/indexStyle.css
@@ -1,17 +1,43 @@
 #indexContent {
     position: relative;
-    margin-top: 200px;
-    margin-left: 450px;
+    margin-top: 50px;
+    margin-left: 400px;
     font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-a.Button {
+#indexContent2 {
     position: relative;
-    margin-top: 1000px;
-    margin-left: 850px;
+    margin-top: 50px;
+    margin-left: 600px;
+    font-size: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#username {
+    position: relative;
+    margin-top: 50px;
+    margin-left: 750px;
     font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#start {
+    position: relative;
+    width: 160px;
+    height: 60px;
+    margin-top: 50px;
+    margin-left: 870px; 
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
-    background-color: pink;
+    background-color: white;
+}
+
+#logo {
+    position: relative;
+    margin-top: 50px;
+    margin-left: 750px;
 }
