--- a/CSS/statementStyle5.css
+++ b/CSS/statementStyle5.css
@@ -13,6 +13,13 @@
     position: relative;
     margin-top: 100px;
     margin-left: 100px;
+    font-family: Arial, Helvetica, sans-seri;
+}
+
+#logo {
+    position: absolute;
+    margin-top: 180px;
+    margin-left: 70px;
 }
 
 #line {
@@ -22,37 +29,45 @@
     margin-top: -350px;
     margin-left: 450px;
     border-left: 5px solid black;
+}
 
+#username {
+    position: absolute;
+    margin-top: 70px;
+    margin-left: 50px;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #statement {
     position: relative;
-    margin-top: 150px;
-    margin-left: 800px; 
+    margin-top: -200px;
+    margin-left: 600px; 
     font-size: 40px; 
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #statementImg {
     position: relative;
-    margin-top: 150px;
-    margin-left: 700px; 
+    margin-top: 50px;
+    margin-left: 850px; 
 }
 
 #startRecording {
     position: relative;
     width: 160px;
     height: 60px;
-    margin-top: 250px;
+    margin-top: 50px;
     margin-left: 1200px; 
     font-size: 20px;
+
 }
 
 #exportVideo {
     position: relative;
     width: 160px;
     height: 60px;
-    margin-top: 150px;
+    margin-top: 50px;
     margin-left: 100px; 
     font-size: 20px;
 }
