--- a/CSS/waitRoomStyle.css
+++ b/CSS/waitRoomStyle.css
@@ -1,8 +1,8 @@
 body {
-    background-color: pink;
+    background-color: white;
 }
 
-#user1Box {
+#user1Input {
     width: 300px;
     height: 300px;
     position: relative;
@@ -13,14 +13,41 @@ body {
     font-size: 20px;
 }
 
+#user1Output {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    margin-top: -310px;
+    margin-left: 50px;
+    border: 5px solid;
+    text-align: center;
+    font-size: 20px;
+}
+
 #show {
     position: relative;
     margin-top: 20px;
     margin-left: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#logo {
+    position: absolute;
+    margin-top: 180px;
+    margin-left: 70px;
+}
+
+#username {
+    position: absolute;
+    margin-top: 70px;
+    margin-left: 50px;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #line {
     position: absolute;
+    font-family: Arial, Helvetica, sans-serif;    
     width: 0;
     height: 750px;
     margin-top: -350px;
@@ -31,25 +58,34 @@ body {
 #startSignal {
     position: relative;
     margin-top: -150px;
-    margin-left: 1000px; 
+    margin-left: 600px; 
     font-size: 50px; 
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-#openCamera {
+#startSignal1 {
+    position: relative;
+    margin-top: 50px;
+    margin-left: 600px; 
+    font-size: 30px; 
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* #openCamera {
     position: relative;
     width: 160px;
     height: 60px;
-    margin-top: 250px;
+    margin-top: 50px;
     margin-left: 1200px; 
     font-size: 20px;
-}
+} */
 
 #start {
     position: relative;
     width: 160px;
     height: 60px;
     margin-top: 150px;
-    margin-left: 100px; 
+    margin-left: 1500px; 
     font-size: 20px;
-    font-style:italic;
+    font-family: Arial, Helvetica, sans-serif;
 }
