--- a/CSS/resultStyle.css
+++ b/CSS/resultStyle.css
@@ -1,6 +1,6 @@
 #logo {
     position: absolute;
-    margin-top: 480px;
+    margin-top: 550px;
     margin-left: 70px;
 }
 
@@ -12,9 +12,17 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#userName {
+    position: absolute;
+    margin-top: -10px;
+    margin-left: 700px;
+    font-size: 30px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #sofie {
     position: relative;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-left: 100px;
     font-size: 30px;
 }
@@ -24,4 +32,10 @@
     margin-top: -430px;
     margin-left: 500px;
     font-size: 30px;
+}
+
+#result {
+    position: relative;
+    margin-top: -500px;
+    margin-left: 1100px;
 }
