--- a/CSS/statementStyle1.css
+++ b/CSS/statementStyle1.css
@@ -31,14 +31,13 @@
     border-left: 5px solid black;
 }
 
-#username {
+#userName {
     position: absolute;
     margin-top: 70px;
-    margin-left: 50px;
+    margin-left: 80px;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
 }
-
 #statementImg {
     position: relative;
     margin-top: 50px;
