--- a/CSS/statementStyle2.css
+++ b/CSS/statementStyle2.css
@@ -31,10 +31,10 @@
     border-left: 5px solid black;
 }
 
-#username {
+#userName {
     position: absolute;
     margin-top: 70px;
-    margin-left: 50px;
+    margin-left: 80px;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
 }
