--- a/CSS/waitRoomStyle.css
+++ b/CSS/waitRoomStyle.css
@@ -37,10 +37,10 @@ body {
     margin-left: 70px;
 }
 
-#username {
+#userName {
     position: absolute;
     margin-top: 70px;
-    margin-left: 50px;
+    margin-left: 80px;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -89,3 +89,4 @@ body {
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
+
