--- a/server/static/CSS/statementStyle.css
+++ b/server/static/CSS/statementStyle.css
@@ -1,17 +1,17 @@
 #user1Box {
-    width: 300px;
-    height: 300px;
-    border: 6px solid;
+    width: 200px;
+    height: 200px;
+    border: 4px solid;
     text-align: center;
     font-size: 20px;
 }
 
 #sidebar {
-    margin-left: 3rem;
+    margin-left: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2rem;
+    gap: 1.4rem;
 }
 
 #sidebar-line {
@@ -23,19 +23,22 @@
     margin-top: 2%;
 }
 
-
 #line {
     position: absolute;
     width: 0;
-    height: 70%;
-    margin-left: 450px;
+    height: 550px;
+    margin-left: 301px;
     margin-right: 20%;
     margin-top: 2%;
-    border-left: 5px solid black;
+    border-left: 3px solid black;
 }
 
 #countDown {
     margin-bottom: 2rem;
+}
+
+h1 {
+    font-size: 1.3em;
 }
 
 
@@ -46,7 +49,7 @@
 }
 
 #statement {
-    font-size: 40px;
+    font-size: 28px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -75,17 +78,18 @@
 }
 
 #startRecording {
-    width: 200px;
-    height: 60px;
-    border-radius: 5px;
-    font-size: 20px;
+    width: 134px;
+    height: 40px;
+    border-radius: 3px;
+    border-width: thin;
+    font-size: 13px;
 }
 
 #exportVideo {
-    width: 200px;
-    height: 60px;
-    border-radius: 5px;
-    font-size: 20px;
+    width: 134px;
+    height: 40px;
+    border-radius: 3px;
+    border-width: thin;
     margin-top: 2rem;
 }
 
@@ -103,23 +107,43 @@ body {
     display: flex;
     flex-direction: row;
     width: 100%;
-    max-width: 2000px;
+    max-width: 1300px;
+}
+
+#phone {
+    display: none;
+}
+
+@media (max-width: 400px) {
+    #content {
+        display:none;
+    }
+    #phone {
+        display: block;
+    }
 }
 
 #startSignal {
-    font-size: 50px;
+    font-size: 33px;
 }
 
 #startSignal1 {
-    font-size: 30px;
+    font-size: 20px;
 }
 
+#userName {
+    font-size: 1em;
+}
+
+#first-headline {
+    font-size: 1.5em;
+}
 
 #start {
-    width: 160px;
-    height: 60px;
-    font-size: 20px;
-    border-radius: 5px;
+    width: 110px;
+    height: 40px;
+    border-radius: 3px;
+    border-width: thin;
 }
 
 .center {
@@ -137,15 +161,15 @@ body {
 }
 
 #indexContent {
-    font-size: 40px;
+    font-size: 1.5em;
 }
 
 #indexContent2 {
-    font-size: 40px;
+    font-size: 1.5em;
 }
 
 #username {
-    font-size: 30px;
+    font-size: 1.5em;
 }
 
 #form-items {
