--- a/server/templates/statement.html
+++ b/server/templates/statement.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Emotion Dating</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/statementStyle.css') }} ">
 </head>
 
@@ -16,7 +16,7 @@
                     <h1><span id="userName">Username: {{ name }}</span></h1>
 
                     <div id="user1Box">
-                        <video width="300" height="300" controls></video>
+                        <video width="200" height="200" controls></video>
                     </div><!---->
 
                     <div id="countDown">
@@ -24,7 +24,7 @@
                     </div>
 
                     <div id="logo">
-                        <img src="{{ url_for('static', filename='image/logo_dating.png') }} " height="225x" width="264px*">
+                        <img src="{{ url_for('static', filename='image/logo_dating.png') }}" width="178px">
                     </div>
                 </div>
                 <div id="line"></div>
@@ -41,8 +41,8 @@
                     </div>
 
                     <div id="statementImg">
-                        <img src="{{ url_for('static', filename='image/' + statement_id + '.jpeg') }}" height="400px"
-                             width="600px">
+                        <img src="{{ url_for('static', filename='image/' + statement_id + '.jpeg') }}" height="268px"
+                             width="402px">
                     </div>
                     <div id="next-item" style="display: none">
                         {% if last == True %}
