--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -24,6 +24,10 @@
                 <div>
                 Username: <input type="text" name="usernameInput" style="height:20px;width:120px;font-size:20px;" required>
                 </div>
+                <br/>
+                <div>
+                Partner: <input type="text" name="partnerInput" style="height:20px;width:120px;font-size:20px;" required>
+                </div>
                 <div id="startButton">
                     <button type="submit" id="start">Test Starten</button>
                 </div>
