--- a/CSS/resultStyle.css
+++ b/CSS/resultStyle.css
@@ -20,17 +20,24 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#sofie {
+#jonas {
     position: relative;
     margin-top: 100px;
     margin-left: 100px;
     font-size: 30px;
 }
 
-#qinzi {
+#max {
     position: relative;
-    margin-top: -430px;
-    margin-left: 500px;
+    margin-top: -480px;
+    margin-left: 450px;
+    font-size: 30px;
+}
+
+#philipp {
+    position: relative;
+    margin-top: -480px;
+    margin-left: 770px;
     font-size: 30px;
 }
 
