--- a/server/templates/waitRoom.html
+++ b/server/templates/waitRoom.html
@@ -44,7 +44,7 @@
         </div>
 
         <div id="startSignal1">
-            <p>... und den Entanglement Test für unsere User Study antrittst. Wir begleiten dich mit Hingabe und Technologie auf deinem Weg zum romantischen Glück. Der Entanglement Test wurde auf wissenschaftlicher Basis so entwickelt, dass er deine wahren Emotionen wahrnimmt und
+            <p>... und den Entanglement Test antrittst. Wir begleiten dich mit Hingabe und Technologie auf deinem Weg zum romantischen Glück. Der Entanglement Test wurde auf wissenschaftlicher Basis so entwickelt, dass er deine Emotionen wahrnimmt und
                 dir anschließend geeignete Partner:innen vorschlägt. Du bekommst nun nacheinander 15 Aussagen auf deinem Bildschirm angezeigt, die jeweils zehn Sekunden zu lesen sind. Bitte lies sie dir sorgfältig durch und reagiere darauf. Je schneller
                 desto besser. Bitte aktiviere hierfür deine Kamera. </p>
         </div>
