--- a/server/static/CSS/resultStyle.css
+++ b/server/static/CSS/resultStyle.css
@@ -20,17 +20,24 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#sofie {
+#person1 {
     position: relative;
     margin-top: 100px;
     margin-left: 100px;
     font-size: 30px;
 }
 
-#qinzi {
+#person2 {
     position: relative;
     margin-top: -430px;
-    margin-left: 500px;
+    margin-left: 450px;
+    font-size: 30px;
+}
+
+#person3 {
+    position: relative;
+    margin-top: -430px;
+    margin-left: 770px;
     font-size: 30px;
 }
 
