--- a/server/static/CSS/resultStyle.css
+++ b/server/static/CSS/resultStyle.css
@@ -1,7 +1,7 @@
 #logo {
     position: absolute;
-    margin-top: 550px;
-    margin-left: 70px;
+    margin-top: -100px;
+    margin-left: 1600px;
 }
 
 #indexContent {
@@ -20,25 +20,31 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#person1 {
+#img_container {
     position: relative;
     margin-top: 100px;
     margin-left: 100px;
     font-size: 30px;
 }
 
-#person2 {
+#name {
     position: relative;
-    margin-top: -430px;
-    margin-left: 450px;
+    margin-top: -320px;
+    margin-left: 320px;
     font-size: 30px;
 }
 
-#person3 {
+#match {
     position: relative;
-    margin-top: -430px;
-    margin-left: 770px;
+    margin-top: -10px;
+    margin-left: 320px;
     font-size: 30px;
+}
+
+#match_img {
+    position: relative;
+    margin-top: -60px;
+    margin-left: 420px;
 }
 
 #result {
