--- a/server/templates/partner.html
+++ b/server/templates/partner.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Emotion Dating</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/statementStyle.css') }} ">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='CSS/partner.css') }} ">
 </head>
 
 <body>
