--- a/server/templates/result.html
+++ b/server/templates/result.html
@@ -13,7 +13,7 @@
     </div>
 
     <div id="username">
-        <h1><span id="userName">Username: </span></h1>
+        <h1><span id="userName">Username: {{ name }}</span></h1>
     </div>
 
     <div id="logo">
