--- a/server/static/CSS/partner.css
+++ b/server/static/CSS/partner.css
@@ -49,7 +49,7 @@ h1 {
 }
 
 #statement {
-    font-size: 28px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -195,4 +195,25 @@ body {
 
 #person1 {
     margin-top: 5rem;
+}
+
+.choose-buttons {
+    margin-top: 1rem;
+    margin-right: 1rem;
+    width: 134px;
+    height: 40px;
+    border-radius: 3px;
+    border-width: thin;
+    font-size: 13px;
+}
+
+.img_container {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 2rem;
+    font-size: 20px;
+}
+
+#partner {
+    margin-right: 2rem;
 }
